k8s/storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage
  labels:
    app: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
        - name: storage
          image: netologygroup/storage
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /app/App.toml
              subPath: App.toml
            - name: foxford
              mountPath: /app/data/keys/iam.foxford.public_key.p8.der
              subPath: iam.foxford.public_key
            - name: netology
              mountPath: /app/data/keys/iam.netology.public_key.p8.der
              subPath: iam.netology.public_key
            - name: svc
              mountPath: /app/data/keys/svc.private_key.p8.der
              subPath: svc.private_key
            - name: foxford-prev
              mountPath: /app/data/keys/foxford.20180915.iam.key.binary
              subPath: iam.key
            - name: netology-prev
              mountPath: /app/data/keys/netology.20181224.iam.key.binary
              subPath: iam.key
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: config
          configMap:
            name: storage-config
        - name: foxford
          secret:
            secretName: iam.foxford-2019-02-04-pkcs8-der-credentials
        - name: netology
          secret:
            secretName: iam.netology-2019-02-04-pkcs8-der-credentials
        - name: foxford-prev
          secret:
            secretName: foxford-20180915-credentials
        - name: netology-prev
          secret:
            secretName: netology-20181224-credentials
        - name: svc
          secret:
            secretName: svc-pkcs8-der-credentials
