k8s/storage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage-service
spec:
  selector:
    app: storage
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
